# openaustria-rag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/github-workflow/: SKILL.md
docs/: MVP_KONZEPT.md  MVP_KONZEPT_CLOUD.md  analysis-user-feedback.md
docs/specs/: README.md  SPEC_01_DATENMODELL.md  SPEC_02_KONNEKTOREN.md  SPEC_03_INGESTION_PIPELINE.md  SPEC_04_RAG_RETRIEVAL.md  SPEC_05_GAP_ANALYSE.md  SPEC_06_FRONTEND_API.md
src/openaustria_rag/: __init__.py  config.py  db.py  main.py  models.py
src/openaustria_rag/analysis/: gap_analyzer.py  matching.py
src/openaustria_rag/connectors/: base.py  confluence_connector.py  git_connector.py  utils.py  zip_connector.py
src/openaustria_rag/frontend/: api.py  api_client.py  app.py  dashboard.py  schemas.py
src/openaustria_rag/ingestion/: chunking.py  code_parser.py  embedding_service.py  pipeline.py
src/openaustria_rag/llm/: ollama_client.py  prompts.py
src/openaustria_rag/retrieval/: query_engine.py  (+1 more)
tests/: test_api.py  test_config.py  test_db.py  test_models.py  test_smoke.py  test_user_feedback.py
tests/integration/: conftest.py  test_api_e2e.py  test_connector_pipeline.py  test_ingestion_gap.py  test_ingestion_query.py
tests/test_analysis/: test_gap_analyzer.py
tests/test_connectors/: test_base.py  test_confluence.py  test_git.py  test_utils.py  test_zip.py
tests/test_ingestion/: test_chunking.py  test_code_parser.py  test_embedding.py  test_pipeline.py
tests/test_llm/: test_ollama_client.py  test_prompts.py
tests/test_retrieval/: test_query_engine.py  test_vector_store.py
(+11 files in other folders)
